# qt_test

./: report.docx
src/: CMakeLists.txt  climatecontrol.cpp  climatecontrol.h  constString.h  controlbuttons.cpp  controlbuttons.h  humidityinputdialog.cpp  humidityinputdialog.h  iconverter.h  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  pressureconverter.cpp  pressureconverter.h  pressureinputdialog.cpp  pressureinputdialog.h  temperatureconverter.cpp  temperatureconverter.h  temperatureinputdialog.cpp  temperatureinputdialog.h  test_task_qt  themeswitcher.cpp  themeswitcher.h  usersettings.cpp  usersettings.h
